unpackaged/main/default/objects/nbavs__FilterView__c/nbavs__FilterView__c.object-meta.xml
<CustomObject>
    <label>Filter View</label>
    <nameField>
        <displayFormat>FV-{0000}</displayFormat>
        <label>View Unique Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>