unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__Application__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Application__c</fullName>
    <label>Application</label>
    <length>50</length>
    <type>Text</type>
</CustomField>