unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__CreatedByNatterboxUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CreatedByNatterboxUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>CreatedFilterViews</relationshipName>
    <type>Lookup</type>
</CustomField>