unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>