unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__ViewColumns__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ViewColumns__c</fullName>
    <label>View Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>