unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__ViewFilters__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ViewFilters__c</fullName>
    <label>View Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>