unpackaged/main/default/objects/nbavs__FilterView__c/fields/nbavs__ViewName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ViewName__c</fullName>
    <label>View Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>